add logs and roles
